# VideoQA

./: Hair_Love_shot_features.xlsx  METADATA_CSV_README.md  README.md  VECTOR_SEARCH_README.md  VECTOR_SEARCH_SOLUTION.md  convert_json_to_csv.py  cost_estimation_analyzer.py  process_json_to_excel.py  pyproject.toml  pyrightconfig.json  requirements_vector_search.txt  setup.py  test_ffmpeg.py  test_metadata_pipeline.py  test_model_caching.py  test_vector_search.py
chroma_db/: chroma.sqlite3
chroma_db/71186f60-95ee-4dc8-aa6a-c02c71588254/: index_metadata.pickle
excel_output_module2_2_scenes/: Hair Love_internvl_3_1b_shot_features.xlsx  Hair Love_llava_next_shot_features.xlsx
processed_videos_output/Hair Love/: Hair Love_metadata.json  Hair Love_processing_summary.json
processed_videos_output/Hair Love/transcripts/: Hair Love_audio_transcription.json  Hair Love_audio_transcription.txt
processed_videos_output_module2_2_scenes/A_Letter_Never_Sent/: A_Letter_Never_Sent_pipeline_status.json  A_Letter_Never_Sent_shot_metadata.csv  A_Letter_Never_Sent_shots.json  A_Letter_Never_Sent_smolvlm_shot_features.json
processed_videos_output_module2_2_scenes/Hair Love/: Hair Love_internvl_3_1b_shot_features.json  Hair Love_llava_next_shot_features.json  Hair Love_pipeline_status.json  Hair Love_scenes.json  Hair Love_shot_metadata.csv  Hair Love_shots.json  Hair Love_smolvlm_shot_features.json
scripts/: demo_shot_vector_search.py  run_ingestion_demo.py  run_scene_segmentation_demo.py
src/scene_segmentation/: __init__.py  analyze_vllm_outputs.py  feature_extractor.py  internvl_3_1b_shot_annotator.py  internvl_chat_shot_annotator.py  llava_next_shot_annotator.py  pipeline.py  scene_grouper.py  shot_detector.py  similarity_calculator.py  smolvlm_shot_annotator.py  smolvlm_shot_annotator4.py  smolvlm_shot_annotator5.py  smolvlm_shot_annotator_v2.py  smolvlm_shot_annotator_v3.py  vllm_shot_annotator.py
src/video_ingestion/: __init__.py  audio_processing.py  frame_processing.py  metadata_extraction.py  pipeline.py  utils.py
src/videoqa/: __init__.py  cli.py  json_processing.py  main.py  shot_vector_indexer.py  video_processor.py
